{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 130,
  "lineage": "9396d522-d8e8-f0f3-c72b-dffce02111fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ecsnetworking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ccde81b211f918",
            "arn": "arn:aws:ec2:us-east-1:366256582748:elastic-ip/eipalloc-0e8ccde81b211f918",
            "association_id": "eipassoc-0ac8b373aec065b3a",
            "domain": "vpc",
            "id": "eipalloc-0e8ccde81b211f918",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e1bf40a86d13f510",
            "private_dns": "ip-172-31-22-12.ec2.internal",
            "private_ip": "172.31.22.12",
            "public_dns": "ec2-52-6-245-133.compute-1.amazonaws.com",
            "public_ip": "52.6.245.133",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eip-nat-ecsnetworking"
            },
            "tags_all": {
              "Name": "eip-nat-ecsnetworking"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ccde81b211f918",
            "association_id": "eipassoc-0ac8b373aec065b3a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c36e408dab98c176",
            "network_interface_id": "eni-0e1bf40a86d13f510",
            "private_ip": "172.31.22.12",
            "public_ip": "52.6.245.133",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07edc972fe37953ad",
            "tags": {
              "Name": "nat-gw-ecsnetworking"
            },
            "tags_all": {
              "Name": "nat-gw-ecsnetworking"
            },
            "vpc_id": "vpc-03d506f5ba1d7b1b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-ecsnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-ecsnetworking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366256582748:route-table/rtb-0f058bfaf2e6224e0",
            "id": "rtb-0f058bfaf2e6224e0",
            "owner_id": "366256582748",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c36e408dab98c176",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-ecsnetworking"
            },
            "tags_all": {
              "Name": "rt-private-ecsnetworking"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d506f5ba1d7b1b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "366256582748",
            "id": "rtb-0f058bfaf2e6224e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat-ecsnetworking",
            "aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0247e340d796be1dc",
            "region": "us-east-1",
            "route_table_id": "rtb-0f058bfaf2e6224e0",
            "subnet_id": "subnet-00004f31c25c18a3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-ecsnetworking",
            "aws_nat_gateway.this",
            "aws_route_table.private-ecsnetworking",
            "aws_subnet.private-ecsnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366256582748:security-group/sg-0fe8c4364e5a77bb7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe8c4364e5a77bb7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2629b6258ab3f4c"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "sgback",
            "name_prefix": "",
            "owner_id": "366256582748",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d506f5ba1d7b1b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "366256582748",
            "id": "sg-0fe8c4364e5a77bb7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sgfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366256582748:security-group/sg-0e2629b6258ab3f4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2629b6258ab3f4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "sgfront",
            "name_prefix": "",
            "owner_id": "366256582748",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d506f5ba1d7b1b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "366256582748",
            "id": "sg-0e2629b6258ab3f4c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ecsnetworking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366256582748:subnet/subnet-00004f31c25c18a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00004f31c25c18a3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366256582748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private-ecsnetworking"
            },
            "tags_all": {
              "Name": "subnet-private-ecsnetworking"
            },
            "vpc_id": "vpc-03d506f5ba1d7b1b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "366256582748",
            "id": "subnet-00004f31c25c18a3b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}